# perseus-v2

./: .clang-format  .envrc  .gitignore  .gitmodules  1628983030.rviz  3500333124.rviz  CLAUDE.md  ERRORS.md  LICENSE  README.md  SO-100_MOVEIT_INTEGRATION_PLAN.md  Testing Tools guidance.md  \  default.nix  error.txt  flake.nix  frames_2025-09-13_13.50.06.gv  frames_2025-09-13_14.08.15.gv  frames_2025-12-07_18.04.01.gv  package-lock.json  package.json  password_database.kdbx  perseus-v2.code-workspace  readme.md  test_ml.sh  treefmt.nix  treefmt.toml  typos.toml  vesc_0_appconf.xml  vesc_0_mcconf.xml
Software/native/can-interface/: CMakeLists.txt  default.nix
Software/native/can-interface/src/: main.cpp
Software/ros_ws/src/autonomy/: CMakeLists.txt  package.nix  package.xml
Software/ros_ws/src/autonomy/launch/: mapping_using_slam_toolbox.launch.py
Software/ros_ws/src/autonomy/src/: mapper.cpp
Software/ros_ws/src/hardware_interfaces/: CMakeLists.txt  package.nix  package.xml
Software/ros_ws/src/hardware_interfaces/src/: drive.cpp
Software/shared/hi-can-lib/: CMakeLists.txt  default.nix
Software/shared/hi-can-lib/include/: hi_can_address.hpp  hi_can_lib.hpp  hi_can_packet.hpp
Software/shared/hi-can-lib/src/: hi_can_lib.cpp  hi_can_packet.cpp
Software/shared/hi-can-raw/: CMakeLists.txt  default.nix
docs/pyproject/: pyproject.toml
firmware/kibisis-pico-driver/quadrature_encoders/: CMakeLists.txt  quadrature_encoder.pio
firmware/kibisis-pico-driver/quadrature_encoders/include/: quadrature_encoders.hpp
firmware/kibisis-pico-driver/quadrature_encoders/src/: quadrature_encoders.cpp
firmware/space-resources-end-effector/: CMakeLists.txt  pico_sdk_import.cmake
firmware/space-resources-end-effector/src/: current_sensor.cpp  current_sensor.hpp  heater_control.cpp  heater_control.hpp  main.cpp  protocol.cpp  protocol.hpp  servo_driver.cpp  servo_driver.hpp  system_status.hpp  transceiver.cpp  transceiver.hpp  usb_repl.cpp  usb_repl.hpp
firmware/space-resources-end-effector/tools/: pico_monitor.py
software/arm-teleop-direct/: CMakeLists.txt  README.md  main.cpp
software/arm-teleop-direct/include/: perseus-arm-teleop.hpp  servo-constants.hpp
software/arm-teleop-direct/src/: main.cpp  perseus-arm-teleop.cpp
software/arm-teleop-network/: CMakeLists.txt  README.md  config.cmake.in
software/arm-teleop-network/include/: arm-network-mini.hpp  arm-network.hpp  arm-servo-protocol-mini.hpp  arm-servo-protocol.hpp  perseus-arm-teleop-mini.hpp  perseus-arm-teleop.hpp
software/arm-teleop-network/include/arm_teleop/: follower_controller.hpp  leader_controller.hpp  network_protocol.hpp  networked_arm_controller.hpp
software/arm-teleop-network/src/: arm-network-mini.cpp  arm-network.cpp  arm-servo-protocol-mini.cpp  arm-servo-protocol.cpp  follower-main-mini.cpp  follower-main.cpp  follower_controller.cpp  follower_main.cpp  leader-main-mini.cpp  leader-main.cpp  leader_controller.cpp  leader_main.cpp  main.cpp  network_protocol.cpp  networked_arm_controller.cpp  perseus-arm-teleop-mini.cpp  perseus-arm-teleop.cpp
software/native/can-interface/: CMakeLists.txt  default.nix
software/native/can-interface/src/: main.cpp
software/ros_ws/src/as7343_driver/: CMakeLists.txt  README.md  package.xml
software/ros_ws/src/as7343_driver/config/: as7343_config.yaml
software/ros_ws/src/as7343_driver/docs/: conf.py  configuration.rst  data_interpretation.rst  hardware_setup.rst  index.rst  topics.rst  usage.rst
software/ros_ws/src/as7343_driver/launch/: as7343.launch.py
software/ros_ws/src/as7343_driver/src/: as7343_device.cpp  as7343_node.cpp  i2c_device.cpp  main.cpp
software/ros_ws/src/autonomy/: CMakeLists.txt  README.md  package.xml
software/ros_ws/src/autonomy/behavior_trees/: navigate_through_poses_sequential.xml  navigate_through_poses_sequential_v2.xml  navigate_through_poses_sequential_with_aruco.xml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
software/ros_ws/src/autonomy/config/: cmd_vel_mux.yaml  cyclonedds_bridge.xml  cyclonedds_localhost.xml  ekf_config.yaml  ekf_config_3d.yaml  ekf_config_fast_lio.yaml  ekf_config_fast_lio_core.yaml  ekf_config_stereo_imu.yaml  ekf_config_stereo_odom.yaml  ekf_params.yaml  ekf_params_perseus_lite.yaml  keepout_mask.yaml  mapper_params_online_async.yaml  mapper_params_online_async_v2.yaml  mapper_params_online_sync.yaml  nav_aut_arch.yaml  nav_params_perseus_lite.yaml  nav_sim_params.yaml  nav_sim_params_3d.yaml  nav_sim_params_prime.yaml  perseus_nav_params.yaml  sbc_bridge_topics.yaml  slam_toolbox_params.yaml  slam_toolbox_params_clean.yaml  slam_toolbox_params_clean_perseus_lite.yaml  twist_mux.yaml  (+3 more)
software/ros_ws/src/autonomy_diagnostics/: package.xml  setup.cfg  setup.py
software/ros_ws/src/crater_exit/: README.md  package.xml  setup.cfg  setup.py
software/ros_ws/src/deployment_mechanism/: CMakeLists.txt  package.xml
software/ros_ws/src/hardware_interfaces/: CMakeLists.txt  package.xml
software/ros_ws/src/input_devices/: package.xml  setup.cfg  setup.py
software/ros_ws/src/kibisis_sensors/: CMakeLists.txt  package.xml
software/ros_ws/src/network_recovery/: CMakeLists.txt  README.md  package.xml
software/ros_ws/src/perseus_autonomy_bridge/: CMakeLists.txt  package.xml
software/ros_ws/src/perseus_autonomy_interfaces/: CMakeLists.txt  package.xml
software/ros_ws/src/perseus_behavior/: CMakeLists.txt  README.md  package.xml
software/ros_ws/src/perseus_bringup/: CMakeLists.txt  package.xml
software/shared/hi-can/: CMakeLists.txt  default.nix
software/shared/hi-can-raw/: CMakeLists.txt  default.nix
software/shared/hi-can-raw/include/: hi_can_raw.hpp
software/shared/hi-can-raw/src/: hi_can_raw.cpp
software/shared/hi-can/include/: hi_can.hpp  hi_can_address.hpp  hi_can_packet.hpp  hi_can_parameter.hpp
software/shared/hi-can/src/: hi_can.cpp  hi_can_address.cpp  hi_can_packet.cpp  hi_can_parameter.cpp
software/shared/hi-can/tests/: addresses.cpp  filter.cpp  packet.cpp  packet_manager.cpp  packet_manager_test.cpp
(+1693 files in other folders)
