[project]
name = "roar-docs-pyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "breathe>=4.35.0",
    "exhale>=0.3.7",
    "sphinx>=8.1.3",
    "myst-parser[linkify]>=4.0.0",
    "sphinx-immaterial[keys]>=0.12.4",
    "sphinxcontrib-jquery>=4.1",
    "sphinx-tippy>=0.4.3",
]
