[project]
name = "roar-docs-pyproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "breathe>=4.36.0",
  "exhale>=0.3.7",
  "sphinx==8.2.3",
  "myst-parser[linkify]>=5.0.0",
  "sphinx-immaterial[keys]>=0.13.8",
  "sphinxcontrib-jquery>=4.1",
  "sphinx-tippy>=0.4.3",
]
